syntax = "proto3";
option go_package = "./";

message Post {
    int64 post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    string publication_date = 5;
    repeated string tags = 6;
}

message PostID {
    int64 post_id = 1;
}

service BlogService {
    rpc CreatePost(Post) returns (Post);
    rpc ReadPost(PostID) returns (Post);
    rpc UpdatePost(Post) returns (Post);
    rpc DeletePost(PostID) returns (DeleteResponse);
}

message DeleteResponse {
    bool success = 1;
}
/*
PostID (unique identifier)
Title
Content
Author
Publication Date
Tags (multiple tags per post)


message CreateRequest {
  Amount amount = 1;
  string from = 2;
  string to = 3;
  string VATNumber = 4;
}



message CreateResponse {
  bytes pdf = 1;
  bytes docx = 2;

}

service Invoicer {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(CreateRequest) returns (CreateResponse);

}*/